--- a/main.css
+++ b/main.css
@@ -10,12 +10,38 @@ body {
     height: 100vh;
     color: var(--text-color);
     background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
 }
 
 header {
     text-align: center;
     font-size: 1.8rem;
     font-family: 'Macondo', cursive;
+}
+
+.gameboard {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    justify-content: center;
+    font-size: 2.5rem;
+}
+
+.game-square {
+    margin: 0;
+    width: 128px;
+    height: 128px;
+    text-align: center;
+    border: 1px solid white;
+    font-weight: 600;
+}
+
+.game-square:hover {
+    background-color: var(--accent-color);
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 /* Footer section */
