--- a/main.css
+++ b/main.css
@@ -44,6 +44,37 @@ header {
     cursor: pointer;
 }
 
+.player-info {
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.player-info input {
+    width: 200px;
+    height: 24px;
+    text-align: center;
+    border-radius: 8px;
+}
+
+.player-info button {
+    width: 104px;
+    padding: 8px 16px;
+    color: var(--text-color);
+    font-weight: 600;
+    background-color: var(--accent-color);
+    border: 0;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+}
+
+.player-info button:hover {
+    cursor: pointer;
+    background-color: #5929a7;
+}
+
 /* Footer section */
 
 footer {
